@@ -16,10 +16,10 @@ $timestart = TIME();
 $relcount = 0;
 
 //
-//	This script removes all releases and nzb files based on poster, searchname, name or guid
+//	This script updates all releases with the guid from the nzb file.
 //
 
-if ($argv[1] != "true")
+if (!isset($argv[1]))
 {
 	usage();
 }
@@ -37,7 +37,7 @@ foreach ($relrecs as $relrec)
 	{
 		$nzbpath = 'compress.zlib://'.$nzbpath;
 		$nzbfile = simplexml_load_file($nzbpath);
-		
+
 		$binary_names = array();
 		foreach($nzbfile->file as $file)
 		{
@@ -45,16 +45,16 @@ foreach ($relrecs as $relrec)
 		}
 		if (count($binary_names) == 0)
 			continue;
-		
+
 		asort($binary_names);
 		$segment = "";
 		foreach($nzbfile->file as $file)
 		{
 			if ($file["subject"] == $binary_names[0])
 			{
-				$segment = $file->segments->segment; 
+				$segment = $file->segments->segment;
 				$nzb_guid = md5($segment);
-				
+
 				$db->query("UPDATE releases set nzb_guid = " . $db->escapestring($nzb_guid) . " WHERE ID = " . $relrec["ID"]);
 				$relcount++;
 				$consoletools->overWrite("Updating:".$consoletools->percentString($reccnt,sizeof($relrecs))." Time:".$consoletools->convertTimer(TIME() - $timestart));
